@@ -1,3 +1,14 @@
+2006-01-12  Ville Vainio  <vivainio@gmail.com>
+
+	* IPython/iplib.py.py (make_quoted_expr,handle_shell_escape): 
+	Prettified and hardened string/backslash quoting with ipsystem(),
+	ipalias() and ipmagic(). Now even \ characters are passed to
+	%magics, !shell escapes and aliases exactly as they are in the
+	ipython command line. Should improve backslash experience,
+	particularly in Windows. %cd magic still doesn't support backslash
+	path delimiters, though. Also deleted all pretense of supporting 
+	multiline command strings in !system or %magic commands.
+
 2006-01-12  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/ipstruct.py (Struct): Rename IPython.Struct to
